[package]
name = "itables"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.24", default-features = false, features = ["png"] }
leptess = "0.13"
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# by overriding our dependencies' compilation settings, we can further optimize for size
# https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html#optimizing-dependencies
[profile.release.package."*"]
codegen-units = 1
